[package]
name = "vpxtool-fe"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vpxtool-fe"
path = "src/main.rs"


[dependencies]
vpxtool = "0.23.4"
#sdl3 = { version = "0.14.18", features = ["build-from-source-static", "image", "ttf"] }
# TODO this was supposed to be released in 0.14.19 but that build is broken
sdl3 = { git = "https://github.com/vhspace/sdl3-rs.git", rev = "d4c4bc7", features = ["build-from-source-static", "image", "ttf"] }
# see https://github.com/maia-s/sdl3-sys-rs/issues/19
sdl3-ttf-sys = { version = "0.1.2+SDL3-ttf-3.2.2", features = ["build-from-source-static", "build-static-vendored"] }

#imgui = "0.12.0"
anyhow = "1.0.98"
log = "0.4.27"
env_logger = "0.11.8"
is_executable = "1.0.4"


[dev-dependencies]
pretty_assertions = "1.4.1"
